welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: '(' expected but ';' found.
    } else if ; {
              ^SlugHunting:11: error: ';' expected but 'else' found.
    } else {
      ^