welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  
    if (isFacingTrail()==true){
      avance()
    } else if ; {
      droite()
      if (isFacingTrail()==true){
        avance()
      }
    } else {
      gauche()
      if (isFacingTrail()==true){
        avance()
      }
      
    }
 
}

def isFacingTrail():Boolean = {
  var green: Boolean=false
  
  if (estFaceMur()==false){
    avance()
    if (getCouleurSol()==Color.green){
      
      green= true
    }
    recule()
  }
  
  return green

}